MOB-45005: Initial migration to Jetty 12 (#88)
* MOB-45005: Initial migration to Jetty 12

* MOB-45005: Update dependencies and change default to shared thread pool

* MOB-45005: The pre-processors are removed in the result

* MOB-45005:  Better calculation of bytes sent

* MOB-45005: Appropriate property getter mechanism

* MOB-45005: Lower the jetty debug level to INFO

* MOB-45005: Remove unused code

* MOB-45005: Fallback to UTF-8 on encoding error

* MOB-45005: Improve logic

* MOB-45005: Set correct logging level for some messages.

* MOB-45005:  Fix pom

* MOB-45005:  Use more performant atomic version

* MOB-45005: Catch Illegal and Unsupported Charset Exceptions

* MOB-45005: Clean and Improvements

* MOB-45005: Clean and Improvements on HTTP2 Async Controller

* MOB-45005: Fix parent sample metrics

* MOB-45005:  Fixes and improvements

* MOB-45005: Update jetty to 12.1.6

* MOB-45005: Fix typo introduced on 2.0.3 version.

* MOB-45005: Improvements in protocol error detection

* MOB-45005: Improvements in Happy Eyeballs algorithm, and tests

* MOB-45005: Improvements

* Fix transport on HTTP/1 to maxMultiplex 1

* Add embedded resources inherit parent props.